--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div class="item active">
     <div class="row">
       <div class="col-md-4">
-      <img src="img/1934025.png" display: "flex"; justify-content: "center"; alt="Tablets">
+      <img class="img-square center-block" src="img/1934025.png" alt="Tablets">
       </div>
       <div class="col-md-8">
       
@@ -319,7 +319,7 @@
     <div class="item">
     <div class="row">
      <div class="col-md-4">
-      <img src="img/1814008.png"  alt="Laptop">
+      <img class="img-square center-block" src="img/1814008.png"  alt="Laptop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>B.Tech-Project</b></h3>
@@ -333,7 +333,7 @@
     <div class="item">
      <div class="row">
      <div class="col-md-4">
-      <img src="img/1087815.png" alt="Desktop">
+      <img class="img-square center-block" src="img/1087815.png" alt="Desktop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>Samudra - AIT AUV</b></h3>
