--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        
             <nav class="navbar navbar-default navbar-fixed-top custom visible-md visible-lg">
              <div class="container-fluid">
-             <div class="navbar-header navbar-fixed-top">
+             <div class="navbar-header">
              <button type="button" class="navbar-toggle collapsed custom6" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
