--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a class="cstm"  href="#canvas" onclick="closeNav()">Achievements</a>
                 <a class="cstm" href="#section4" onclick="closeNav()">Contact Me</a>
             </div>
-        <div  class="buttoneffect" style="font-size:30px;cursor:pointer; margin-left:10px; color:dimgrey;" onclick="openNav()">&#9776; <h2 style="float:right; color:#36d7b7;font-family: 'Fjalla One', sans-serif; margin-top:5px; margin-right:10px">Shubham Jain &#8482;</h2></div>
+        <div  class="buttoneffect" style="font-size:30px;cursor:pointer; margin-left:10px; color:dimgrey;" onclick="openNav()">&#9776; <h2 style="float:right; color:#2f4f4f;font-family: 'Fjalla One', sans-serif; margin-top:5px; margin-right:10px">Shubham Jain &#8482;</h2></div>
 
         <script>
             var open = false;
